# word2vec

./: main.py  pyproject.toml  request.http
